[gd_scene load_steps=3 format=3 uid="uid://b5xjor4rx368d"]

[ext_resource type="Script" uid="uid://dh4ehx6e2wle2" path="res://_Scenes/ShopItem/shop_item.gd" id="1_g7o87"]
[ext_resource type="Theme" uid="uid://dw80nkeq5acxs" path="res://_Scenes/Game/main_ui.tres" id="2_rs1si"]

[node name="ShopItem" type="Button"]
custom_minimum_size = Vector2(200, 100)
offset_right = 200.0
offset_bottom = 100.0
theme = ExtResource("2_rs1si")
script = ExtResource("1_g7o87")

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_vertical = 2
expand_mode = 2

[node name="DisplayName" type="Label" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_bottom = -50.0
grow_horizontal = 0
theme = ExtResource("2_rs1si")
theme_override_constants/outline_size = 6
text = "display_name"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Price" type="Label" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_rs1si")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.392157)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 1
text = "$10M"
horizontal_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
